<resources>
    <string name="app_name">Cancer Connect</string>
    <string name="create_event">Create Event</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="backbutton">backButton</string>
    <string name="imagebutton">imageButton</string>
    <string name="register">Register</string>
    <string name="cancer_connect">CANCER CONNECT</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="login">LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="event_postcode">Event Postcode</string>
    <string name="event_title">Event Title</string>
    <string name="create_event">Create Event</string>
    <string name="create_event">Create Event</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="time_text">Time Text</string>
    <string name="event_postcode">Event Postcode</string>
    <string name="event_title">Event Title</string>
    <string name="password">Password</string>
    <string name="profilepicture">profilePicture</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="continue">Continue</string>
    <string name="full_name">Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="submit">Submit</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="dobentry">DOBentry</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>
